--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
   "description": "",
   "type": "module",
   "main": "index.js",
+  "types": "types/index.d.ts",
+  "files": [
+    "types"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "typescript": "^5.0.4"
+  }
 }
