--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,14 @@
     "allowJs": true,
     "checkJs": true,
     "strict": true,
-    "emitDeclarationOnly": true,
+    "module": "NodeNext",
+    "moduleResolution": "nodenext",
+    "target": "ESNext",
+    "sourceMap": true,
     "declaration": true,
-    "declarationDir": "types"
-  }
+    "declarationMap": true,
+    "declarationDir": "types",
+    "outDir": "dist"
+  },
+  "include": ["src/**/*"]
 }
